# vivo_fastboot

./: README.md  fastboot.c  meson.build  usb_linux.c
